fixed error message / install button overlap

--- a/client_web/src/App.css
+++ b/client_web/src/App.css
@@ -164,13 +164,13 @@ span{
   
 }
 
-.inputBox { 
-  margin: 4px 4px 4px 4px; 
-}
-
 .sortBy:hover{
   box-shadow: 1px 1px 1px rgba(15, 13, 13, 0.582); 
   cursor: pointer; 
+}
+
+.inputBox { 
+  margin: 4px 4px 4px 4px; 
 }
 
 .show {display:block;}
@@ -186,7 +186,7 @@ span{
   background-color: #f6f6f6;
   min-width: 230px;
   overflow: auto;
-  box-shadow: 0px 4px 4px 0px rgba(0,0,0,0.2);
+  box-shadow: 0px 4px 4px rgba(0,0,0,0.2);
   z-index: 1;
 }
 
@@ -207,7 +207,7 @@ span{
   background-color:  #78B9CC;
   margin: 10px; 
   width: 250px; 
-  box-shadow: 4px 4px rgba(143, 142, 142, 0.397);
+  box-shadow: 4px 4px 4px rgba(143, 142, 142, 0.397);
   position: relative;   
   padding: 5px; 
   border-radius: 5px; 
@@ -217,14 +217,15 @@ span{
   background-color: #60DA7D; 
   font-family: 'Roboto Mono', monospace;
   height: 85px;
-  width: 40%;   
+  width: 30%;   
   position: fixed;
-  top: 30%; 
-  left: 30%; 
-  z-index: 1;  
-  display: block; 
+  top: 29%; 
+  left: 30%;
+  right: 30%; 
+  z-index: 2;  
+  display: relative; 
   margin: 0 auto;
-  box-shadow: 4px 4px rgba(143, 142, 142, 0.397);
+  box-shadow: 2px 2px 1px 1px rgba(83, 83, 83, 0.24);
   padding: 10px; 
   border-radius: 5px; 
   font-size: 18px; 
@@ -236,6 +237,7 @@ span{
   font-family: 'Roboto Mono', monospace;
   cursor: pointer; 
   color: white; 
+  margin: 10px;
 }
 
 .okButton:hover {
